--- a/static/style.css
+++ b/static/style.css
@@ -215,7 +215,7 @@ top:-15px;
     background-size: cover;
     padding: 200px 0;
     position: relative;
-    background-image: url("/static/img/home.jpg");
+    background-image: url("/static/image/home.jpg");
     background-repeat: no-repeat;
    
   
@@ -342,9 +342,10 @@ top:-15px;
 .content3{
     position: absolute;
     background-size: cover;
+    
     padding: 100px 0;
     position: relative;
-    background-image: url("/static/img/contact.jpg");
+    background-image: url("/static/image/contact.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
@@ -380,7 +381,7 @@ top:-15px;
     background-size: cover;
     padding: 100px 40px;
     position: relative;
-    background-image: url("/static/img/news.jpg");
+    background-image: url("/static/image/news.jpg");
     background-repeat: no-repeat;
    
 
